# app/Http/Resources/ActivityResource.php
@@ -5,6 +5,22 @@ namespace App\Http\Resources;
 use App\Models\Activity;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes\Items;
+use OpenApi\Attributes\Property;
+use OpenApi\Attributes\Schema;
+
+#[Schema(
+    schema: 'ActivityResource',
+    title: 'ActivityResource',
+    properties: [
+        new Property(
+            property: 'data',
+            title: 'data',
+            type: 'array',
+            items: new Items(ref: ActivityResource::class)
+        )
+    ],
+)]#
 
 /** @mixin Activity */
 class ActivityResource extends JsonResource
